# Modular-FPS

./: base.tscn  enemy.gd  enemy.gd.uid  gun.tscn  palyer.gd  project.godot  ui.tscn
Documentation/: Weapon System.md
extension/: CMakeLists.txt  SConstruct  ext.gdextension  ext.gdextension.uid
extension/src/: gdexample.h  gdexample.windows.template_debug.x86_64.obj.import  register_types.cpp  register_types.windows.template_debug.x86_64.obj.import
models/: gun1.blend.import  gun1.blend1
scripts/: gun.gd  spell_base.gd  spell_base.gd.uid
sprites/: shotput1.png.import
